--- a/views/loc.ejs.html
+++ b/views/loc.ejs.html
@@ -1,13 +1,13 @@
-<!-- PAGE 4 -->
+<!-- page 3 -->
 
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Yeah boi</title>
+    <title>locations</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/Users/vrsreeganesh/Desktop/Samanyu/venue-management/public/stylesheets/adam_4.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/Users/vrsreeganesh/Desktop/Samanyu/venue-management/public/stylesheets/adam_3.css" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -24,25 +24,17 @@
     <div id="cain">
 
         <div class="square_1">
-            <div class="square_1_1">
-                <h1 style="font-size:3vw; color:rgb(198, 198, 221); font-family:serif; text-align:center;">Venue name</h1>
-            </div>
+            <div class="square_1_1"></div>    
         </div>
-
         <div class="square_2">
-            
-            <div class="square_2_1">
-                <div class="square_2_1_calendar">
-                    <h2 style="font-size:3vw; color:rgb(198, 198, 221); font-family:serif; text-align:center;">Calendar</h2>
-                </div>
-            </div>
-
-            <div class="square_2_2">
-                <h3 style="font-size:3vw; color:rgb(198, 198, 221); font-family:serif; text-align:center;">Details</h3>
-
-            </div>
+            <div class="square_2_1"></div>
         </div>
-
+        <div class="square_3">
+            <div class="square_3_1"></div>
+        </div>
+        <div class="square_4">
+            <div class="square_4_1"></div>
+        </div>
 
     </div>
 </body>
