--- a/views/login.ejs.html
+++ b/views/login.ejs.html
@@ -1,13 +1,13 @@
-<!-- page 3 -->
+<!-- PAGE 2 -->
 
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Yeah boi</title>
+    <title>login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/Users/vrsreeganesh/Desktop/Samanyu/venue-management/public/stylesheets/adam_3.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/Users/vrsreeganesh/Desktop/Samanyu/venue-management/public/stylesheets/adam_2.css" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -23,18 +23,10 @@
 <body>
     <div id="cain">
 
-        <div class="square_1">
-            <div class="square_1_1"></div>    
-        </div>
-        <div class="square_2">
-            <div class="square_2_1"></div>
-        </div>
-        <div class="square_3">
-            <div class="square_3_1"></div>
-        </div>
-        <div class="square_4">
-            <div class="square_4_1"></div>
-        </div>
+        <div class="square_1"></div>
+
+        <!-- <div class="square_2"></div> -->
+
 
     </div>
 </body>
