--- a/views/venue.ejs.html
+++ b/views/venue.ejs.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Venue</title>
+    <title>Venue information</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/Users/vrsreeganesh/Desktop/Samanyu/venue-management/public/stylesheets/adam_4.css" />
     <!-- Latest compiled and minified CSS -->
