Edited Home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,23 +5,18 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home</title>
+    <title>V-Manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/Users/vrsreeganesh/Desktop/Samanyu/venue-management/public/stylesheets/adam.css" />
-    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" type="text/css" media="screen" href="./stylesheets/main.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!-- <script src="main.js"></script> -->
 </head>
 
 
 <body>
-    <div id="cain">
+    <!-- <div>
 
         <div class="sidebar">
         </div>
@@ -64,7 +59,34 @@
         <div class = "square_7"></div>
         <div class = "square_8"></div>
         <div class = "square_9"></div>
+     -->
     
+    <div id= "head">
+<ul>
+    <li>V-Manager</li>    <li style="float:right;"><a href="login.ejs" >Login</a></li>
+
+</ul>        
+    </div> 
+
+    <div id= "rest">
+        <div id= "cards">
+            <div id= "a1" class= "card">
+
+            </div>
+            <div id= "a2" class= "card">
+
+            </div>
+            <div id= "a3" class= "card">
+
+            </div>
+            <div id= "a4" class= "card">
+
+            </div>
+        </div>
+
+        <div id= "calendar">
+
+        </div>
     </div>
-</body>
+    </body>
 </html>
