Edited login  page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
     
     <div id= "head">
 <ul>
-    <li>V-Manager</li>    <li style="float:right;"><a href="login.ejs" >Login</a></li>
+    <li>V-Manager</li>    <li style="float:right;"><a href="login" >Login</a></li>
 
 </ul>        
     </div> 
