--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,29 +5,27 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>login</title>
+    <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./stylesheets/adam_2.css" />
-    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" type="text/css" media="screen" href="./stylesheets/login.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!-- <script src="main.js"></script> -->
 </head>
 
 
 <body>
-    <div id="cain">
-
-        <div class="square_1"></div>
-
-        <!-- <div class="square_2"></div> -->
-
-
+    <div class="home">
+        <a href="/">&lt; Home</a>
     </div>
+    <div class="login-page">
+        <div class="form">
+          <input type="text" placeholder="Username" id="name" />
+          <input type="password" placeholder="Password" id="password" />
+          <button onclick="Login();alert('Student data was added to the database successfully :)')">L ogin</button>
+        </div>
+    </div>
+    
 </body>
 </html>
