--- a/views/venue.ejs
+++ b/views/venue.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Venue information</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./stylesheets/adam_4.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./stylesheets/venue.css" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -21,29 +21,17 @@
 
 
 <body>
-    <div id="cain">
+    
+    <div id= "venue">
 
-        <div class="square_1">
-            <div class="square_1_1">
-                <h1 style="font-size:3vw; color:rgb(198, 198, 221); font-family:serif; text-align:center;">Venue name</h1>
-            </div>
+    </div>
+    <div id= "cal_details">
+        <div id= "calendar">
+
         </div>
+        <div id= "details">
 
-        <div class="square_2">
-            
-            <div class="square_2_1">
-                <div class="square_2_1_calendar">
-                    <h2 style="font-size:3vw; color:rgb(198, 198, 221); font-family:serif; text-align:center;">Calendar</h2>
-                </div>
-            </div>
-
-            <div class="square_2_2">
-                <h3 style="font-size:3vw; color:rgb(198, 198, 221); font-family:serif; text-align:center;">Details</h3>
-
-            </div>
         </div>
-
-
     </div>
 </body>
 </html>
