--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
     
     <div id= "head">
 <ul>
-    <li>V-Manager</li>    <li style="float:right;"><a href="login" >Login</a></li>
+    <li>V-Manager</li>    <li style="float:right;"><a href="./authentication/login" >Login</a></li>
 
 </ul>        
     </div> 
@@ -36,16 +36,16 @@
     <div id= "rest">
         <div id= "cards">
             <div id= "a1" class= "card">
-
+                <img src="./images/test.jpg"/>
             </div>
             <div id= "a2" class= "card">
-
+                <img src="./images/test.jpg"/>
             </div>
             <div id= "a3" class= "card">
-
+                <img src="./images/test.jpg"/>
             </div>
             <div id= "a4" class= "card">
-
+                <img src="./images/test.jpg"/>
             </div>
         </div>
 
