--- a/public/stylesheets/venue.css
+++ b/public/stylesheets/venue.css
@@ -6,21 +6,44 @@ body {
 
 #venue {
     grid-column: 1/2;
-    /* background-color: darkblue;  */
-}
-
-#cal_details {
-    grid-column: 2/3;
     display: grid;
-    grid-template-rows: 3fr 2fr;
+    grid-template-rows: 10% 60% 30%;
+    grid-gap: 1rem; 
+    border-left: 2px solid #ffffff;
+    border-bottom: 2px solid #ffffff;
+    border-right: 2px solid #ffffff;
+    padding: 2rem;
 }
 
-#calendar {
+#heading {
     grid-row: 1/2;
-    /* background-color: darkcyan; */
+    color: black;
+
+}
+
+#pic {
+    grid-row: 2/3;
+    background-color: rgb(255, 255, 255);
+    padding: 1rem;
+    -webkit-box-shadow: 0px 3px 30px -7px #0031ca;
+    -moz-box-shadow: 0px 3px 30px -7px #0031ca;
+    box-shadow: 0px 3px 30px -7px #0031ca;
 }
 
 #details {
-    grid-row: 2/3;
-    /* background-color: black; */
+    grid-row: 3/4;
+    background-color: aliceblue;
+}
+
+#calendar {
+    grid-column: 2/3;
+    padding: 2rem;
+    display: grid;
+    border-bottom: 20px solid #ffffff;
+    border-right: 16px solid #ffffff;
+    border-top: 16px solid #ffffff;
+}
+
+.fc-event-inner {
+    border: 5px solid red;
 }
