--- a/views/authentication/register.ejs
+++ b/views/authentication/register.ejs
@@ -8,11 +8,10 @@
     <title>Register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/login.css" />
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="../javascripts/main.js"></script>
-        <script src="./../node_modules/axios/dist/axios.min.js"></script>
+        
+        <!-- <script src="../../node_modules/axios/dist/axios.min.js"></script> -->
 </head>
 
 
@@ -21,6 +20,7 @@
         <a href="/">&lt; Home</a>
     </div>
     <div class="login-page">
+        <span style="color:red; text-align:center" class="formError" id="formError"></span>
         <div class="form">
           <input type="text" placeholder="Username" id="username" />
           <input type="text" placeholder="Faculty ID" id="faculty_id" />
