--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,3 @@
-<!-- PAGE 1 -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,7 +16,7 @@
     <link href= "./fullcalendar-4.0.1/packages/core/main.css" rel= "stylesheet"/>
     <link href= "./fullcalendar-4.0.1/packages/daygrid/main.css" rel= "stylesheet"/>
     <link href= "./fullcalendar-4.0.1/packages/bootstrap/main.css" rel= "stylesheet"/>
-    <script src=""></script>
+    <!-- <script src=""></script> -->
 
 
 </head>
@@ -35,19 +33,51 @@
 
     <div id= "rest">
         <div id= "cards">
-            <div id= "a1" class= "card">
-                <img src="./images/test.jpg"/>
-            </div>
-            <div id= "a2" class= "card">
-                <img src="./images/test.jpg"/>
-            </div>
-            <div id= "a3" class= "card">
-                <img src="./images/test.jpg"/>
-            </div>
-            <div id= "a4" class= "card">
-                <img src="./images/test.jpg"/>
-            </div>
+              <div id= "a1" class= "card">
+                <div class="content-overlay"></div>
+                <img class="content-image" src="./images/concert.jpg"/>
+                <div class="content-details fadeIn-top fadeIn-left">
+                    <h3>Main Halls</h3>
+                    <a href="./select_venue/main">
+                    <p>Click here for more info</p>
+                    </a>
+                </div>
+              </div>
+
+              <div id= "a2" class= "card">
+                <div class="content-overlay"></div>
+                <img class="content-image" src="./images/lect.jpg"/>
+                <div class="content-details fadeIn-top fadeIn-right">
+                    <h3>Lecture Halls</h3>
+                    <a href="./select_venue/lecture">
+                    <p>Click here for more info</p>
+                    </a>
+                </div>
+              </div>
+
+              <div id= "a3" class= "card">
+                <div class="content-overlay"></div>
+                <img class="content-image" src="./images/lab.jpg"/>
+                <div class="content-details fadeIn-bottom fadeIn-left">
+                    <h3>Labs</h3>
+                    <a href="./select_venue/labs">
+                    <p>Click here for more info</p>
+                    </a>
+                </div>
+              </div>
+
+              <div id= "a4" class= "card">
+                <div class="content-overlay"></div>
+                <img class="content-image" src="./images/class.jpg"/>
+                <div class="content-details fadeIn-bottom fadeIn-right">
+                    <h3>Classrooms</h3>
+                    <a href="./select_venue/classes">
+                    <p>Click here for more info</p>
+                    </a>
+                </div>
+              </div>
         </div>
+        
 
         <div id= "calendar">
 
@@ -58,16 +88,23 @@
     <script src="./fullcalendar-4.0.1/packages/core/main.js"></script>
     <script src="./fullcalendar-4.0.1/packages/daygrid/main.js"></script>
     <script src="./fullcalendar-4.0.1/packages/bootstrap/main.js"></script>
+    <script src="./fullcalendar-4.0.1/packages/interaction/main.js"></script>
     <script >
 document.addEventListener('DOMContentLoaded', function() {
         var calendarEl = document.getElementById('calendar');
 
         var calendar = new FullCalendar.Calendar(calendarEl, {
-          plugins: [ 'dayGrid', 'bootstrap' ],
-          themeSystem: 'bootstrap'
+          plugins: [ 'dayGrid', 'bootstrap', 'interaction' ],
+          themeSystem: 'bootstrap',
+          dateClick : function(info) {  
+            alert('Clicked on: ' + info.dateStr);
+            alert('Coordinates: ' + info.jsEvent.pageX + ',' + info.jsEvent.pageY);
+            alert('Current view: ' + info.view.type);
+            info.dayEl.style.backgroundColor = 'red';
+    }
         });
-
         calendar.render();
+        
       });
 
     </script>
