--- a/views/venue.ejs
+++ b/views/venue.ejs
@@ -1,5 +1,3 @@
-<!-- PAGE 4 -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,30 +6,48 @@
     <title>Venue information</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./stylesheets/venue.css" />
-    <!-- Latest compiled and minified CSS -->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <!-- <script src="main.js"></script> -->
-</head>
 
+    <link href= "./fullcalendar-4.0.1/packages/core/main.css" rel= "stylesheet"/>
+    <link href= "./fullcalendar-4.0.1/packages/daygrid/main.css" rel= "stylesheet"/>
+    <link href= "./fullcalendar-4.0.1/packages/bootstrap/main.css" rel= "stylesheet"/>
+</head>
 
 <body>
     
     <div id= "venue">
+      <div id="heading">
+        
+      </div>
+      <div id="pic">
 
+      </div>
+      <div id="details">
+
+      </div>
     </div>
-    <div id= "cal_details">
-        <div id= "calendar">
+    <div id= "calendar">
 
-        </div>
-        <div id= "details">
-
-        </div>
     </div>
 </body>
+
+<script src="./fullcalendar-4.0.1/packages/core/main.js"></script>
+<script src="./fullcalendar-4.0.1/packages/daygrid/main.js"></script>
+<script src="./fullcalendar-4.0.1/packages/bootstrap/main.js"></script>
+<script >
+document.addEventListener('DOMContentLoaded', function() {
+    var calendarEl = document.getElementById('calendar');
+
+    var calendar = new FullCalendar.Calendar(calendarEl, {
+      plugins: [ 'dayGrid', 'bootstrap' ],
+      themeSystem: 'bootstrap'
+    });
+
+    calendar.render();
+  });
+
+</script>
 </html>
