--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,7 +90,7 @@
     <script src="./fullcalendar-4.0.1/packages/bootstrap/main.js"></script>
     <script src="./fullcalendar-4.0.1/packages/interaction/main.js"></script>
     <script >
-document.addEventListener('DOMContentLoaded', function() {
+      document.addEventListener('DOMContentLoaded', function() {
         var calendarEl = document.getElementById('calendar');
 
         var calendar = new FullCalendar.Calendar(calendarEl, {
@@ -101,10 +101,19 @@ document.addEventListener('DOMContentLoaded', function() {
             alert('Coordinates: ' + info.jsEvent.pageX + ',' + info.jsEvent.pageY);
             alert('Current view: ' + info.view.type);
             info.dayEl.style.backgroundColor = 'red';
-    }
+          },
+          eventSources: [ {
+          // your event source
+            url: '/calendar/load',
+            method: 'POST',
+            failure: function() {
+              alert('there was an error while fetching events!');
+            },
+            // color: 'yellow',   // a non-ajax option
+            // textColor: 'black' // a non-ajax option
+          } ]
         });
-        calendar.render();
-        
+        calendar.render();      
       });
 
     </script>
