--- a/views/private/incharge/dashboard.ejs
+++ b/views/private/incharge/dashboard.ejs
@@ -7,11 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./stylesheets/dashboard.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../../stylesheets/dashboard.css" />
 </head>
-
-
 <body>
-poda billa
+
 </body>
 </html>
