--- a/views/private/incharge/dashboard.ejs
+++ b/views/private/incharge/dashboard.ejs
@@ -1,5 +1,3 @@
-<!-- PAGE 5 -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,8 +6,83 @@
     <title>User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../../stylesheets/dashboard.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <link href='https://use.fontawesome.com/releases/v5.0.6/css/all.css' rel='stylesheet'>
+    <link href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' rel='stylesheet' />  
+
+    <link href= "../../fullcalendar-4.0.1/packages/core/main.css" rel= "stylesheet"/>
+    <link href= "../../fullcalendar-4.0.1/packages/daygrid/main.css" rel= "stylesheet"/>
+    <link href= "../../fullcalendar-4.0.1/packages/bootstrap/main.css" rel= "stylesheet"/>
 </head>
 <body>
+    <div id="head"></div>
+    <div id="content_calendar">
+        <div id="content">
+            <div id="add" class="card">
+              <div class="card-info back">
+                <span class="about-head">Add</span><br/>
+                <span class="about">Add new events..!</span>
+              </div>
+            </div>
+            <div id="delete" class="card">
+              <div class="card-info back">
+                <span class="about-head">Delete</span><br/>
+                <span class="about">Delete events..!</span>
+              </div>
+            </div>
+            <div id="update" class="card">
+              <div class="card-info back">
+                <span class="about-head">Edit</span><br/>
+                <span class="about">Edit current events..!</span>
+              </div>            
+            </div>
+        </div>
+        <div id="calendar">
 
+        </div>
+    </div>
 </body>
+
+<script src="../../fullcalendar-4.0.1/packages/core/main.js"></script>
+<script src="../../fullcalendar-4.0.1/packages/daygrid/main.js"></script>
+<script src="../../fullcalendar-4.0.1/packages/bootstrap/main.js"></script>
+<script src="../../fullcalendar-4.0.1/packages/interaction/main.js"></script>
+<script >
+
+var temp = localStorage.getItem('user_details');
+
+  document.addEventListener('DOMContentLoaded', function() {
+    var calendarEl = document.getElementById('calendar');
+
+    var calendar = new FullCalendar.Calendar(calendarEl, {
+      plugins: [ 'dayGrid', 'bootstrap', 'interaction' ],
+      themeSystem: 'bootstrap',
+      dateClick : function(info) {  
+        alert('Clicked on: ' + info.dateStr);
+        alert('Coordinates: ' + info.jsEvent.pageX + ',' + info.jsEvent.pageY);
+        alert('Current view: ' + info.view.type);
+        info.dayEl.style.backgroundColor = 'red';
+      },
+      eventSources: [ {
+      // your event source
+        url: '/calendar/loadUser',
+        method: 'POST',
+        extraParams: {
+        user: temp
+        },
+        failure: function() {
+          alert('there was an error while fetching events!');
+        },
+        // color: 'yellow',   // a non-ajax option
+        // textColor: 'black' // a non-ajax option
+      } ]
+    });
+    calendar.render();      
+  });
+
+</script>
+
 </html>
