--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -6,10 +6,11 @@ body {
 
 #head {
     grid-row: 1/2;
-    color: blue;
-    height: 100%;
+    color: #ffffff;
+    font-size: 2.5vh;
+    text-align: center;
+    /* border-bottom: 4px solid #ffffff; */
 }
-
 #content_calendar {
     grid-row: 2/3;
     height: 100%;
@@ -37,9 +38,9 @@ body {
     background-color: rgb(42, 115, 175);
 }
 
-#update {
+#venue {
     grid-row: 3/4;
-    background-color: rgb(26, 72, 110);
+    background-color: rgb(25, 69, 104);
 }
 
 #calendar {
@@ -51,10 +52,6 @@ body {
     border-top: 16px solid #ffffff;
 }
 
-body {
-  background: #ff9800;
-  color: #fff;
-}
 .card {
   position: absolute;
   padding: 5rem;
@@ -78,3 +75,32 @@ body {
     color: #cac4c4;   
     font-size: 2rem;
 }
+
+ul {
+    list-style-type: none;
+    height: 7vh;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #3d5afe;
+    -webkit-box-shadow: 0px 3px 30px -7px #0031ca;
+    -moz-box-shadow: 0px 3px 30px -7px #0031ca;
+    box-shadow: 0px 3px 30px -7px #0031ca;
+  }
+  
+  li {
+    float: left;
+    padding: 1.5vh;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    color: rgb(255, 255, 255);
+  }
