--- a/views/select_venue/classes.ejs
+++ b/views/select_venue/classes.ejs
@@ -11,63 +11,78 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <!-- <script src="main.js"></script> -->
 </head>
 <body>
   <p class="mainhead">Classrooms</p>
     <h4 class="heading">Department of Computer Science & Engineering</h4>
     <div class="row">
-        <div class="col-md-3">
+        <a href="/select_venue/classes/CS107">
+          <div class="col-md-3">
             <div class="card card-3">
               <h3>CS-107</h3>
               <p>Classroom with a maximum strength of 70</p>
             </div>
           </div>
+        </a>
+        <a href="/select_venue/classes/CS117">
           <div class="col-md-3">
               <div class="card card-1">
                 <h3>CS-117</h3>
                 <p>Classroom with a maximum strength of 72</p>
               </div>
-          </div>
+            </a>
+          </div>  
           <div class="col-md-3">
+            <a href="/select_venue/classes/CS204">
               <div class="card card-2">
                 <h3>CS-204</h3>   
                 <p>Classroom with a maximum strength of 70</p>
               </div>
+            </a>
           </div>
           <div class="col-md-3">
+              <a href="/select_venue/classes/CS212">
               <div class="card card-2">
                 <h3>CS-212</h3>
                 <p>Classroom with a maximum strength of 75</p>
               </div>
+            </a>
           </div>
     </div>
 
     <h4 class="heading">Department of Electronics & Communication</h4>
     <div class="row">
-        <div class="col-md-3">
-            <div class="card card-3">
-              <h3>EC-252</h3>
-              <p>Classroom with a maximum strength of 70</p>
-            </div>
+          <div class="col-md-3">
+            <a href="/select_venue/classes/EC252">
+              <div class="card card-3">
+                <h3>EC-252</h3>
+                <p>Classroom with a maximum strength of 70</p>
+              </div>
+            </a>
           </div>
           <div class="col-md-3">
+            <a href="/select_venue/classes/EC212">
               <div class="card card-1">
                 <h3>EC-212</h3>
                 <p>Classroom with a maximum strength of 76</p>
               </div>
+            </a>
           </div>
           <div class="col-md-3">
+            <a href="/select_venue/classes/EC208">
               <div class="card card-2">
                 <h3>EC-208</h3>
                 <p>Classroom with a maximum strength of 81</p>
               </div>
+            </a>
           </div>
           <div class="col-md-3">
+            <a href="/select_venue/classes/EC221">
               <div class="card card-2">
                 <h3>EC-221</h3>
                 <p>Classroom with a maximum strength of 72</p>
               </div>
+            </a>
           </div>
     </div>
 </body>
