--- a/views/private/incharge/dashboard.ejs
+++ b/views/private/incharge/dashboard.ejs
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+    <script src="../../javascripts/functions.js"></script>
+
     <link href='https://use.fontawesome.com/releases/v5.0.6/css/all.css' rel='stylesheet'>
     <link href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' rel='stylesheet' />  
 
@@ -21,7 +23,7 @@
     <div id= "head">
       <ul>
         <li id="hello"></li>
-        <li style="float:right;"><a href="./authentication/login" >Logout</a></li>  
+        <li style="float:right;"><a href="/authentication/logout " onclick="logOut()" >Logout</a></li>  
       </ul>        
     </div> 
       <div id="content_calendar">
