--- a/views/venue.ejs
+++ b/views/venue.ejs
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Venue information</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./stylesheets/venue.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../../stylesheets/venue.css" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <link href= "./fullcalendar-4.0.1/packages/core/main.css" rel= "stylesheet"/>
-    <link href= "./fullcalendar-4.0.1/packages/daygrid/main.css" rel= "stylesheet"/>
-    <link href= "./fullcalendar-4.0.1/packages/bootstrap/main.css" rel= "stylesheet"/>
+    <link href= "../../fullcalendar-4.0.1/packages/core/main.css" rel= "stylesheet"/>
+    <link href= "../../fullcalendar-4.0.1/packages/daygrid/main.css" rel= "stylesheet"/>
+    <link href= "../../fullcalendar-4.0.1/packages/bootstrap/main.css" rel= "stylesheet"/>
 </head>
 
 <body>
@@ -34,16 +34,25 @@
     </div>
 </body>
 
-<script src="./fullcalendar-4.0.1/packages/core/main.js"></script>
-<script src="./fullcalendar-4.0.1/packages/daygrid/main.js"></script>
-<script src="./fullcalendar-4.0.1/packages/bootstrap/main.js"></script>
+<script src="../../fullcalendar-4.0.1/packages/core/main.js"></script>
+<script src="../../fullcalendar-4.0.1/packages/daygrid/main.js"></script>
+<script src="../../fullcalendar-4.0.1/packages/bootstrap/main.js"></script>
 <script >
 document.addEventListener('DOMContentLoaded', function() {
     var calendarEl = document.getElementById('calendar');
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
       plugins: [ 'dayGrid', 'bootstrap' ],
-      themeSystem: 'bootstrap'
+      themeSystem: 'bootstrap',
+      displayEventTime: false,
+      eventSources: [ {
+      // your event source
+        url: '/calendar/loadForVenue',
+        method: 'POST',
+        failure: function() {
+          alert('there was an error while fetching events!');
+        }
+      }]
     });
 
     calendar.render();
