--- a/views/private/admin/add_incharge.ejs
+++ b/views/private/admin/add_incharge.ejs
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Register</title>
+    <title>Add Incharge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../../stylesheets/login.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../../../stylesheets/login.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script src="../../javascripts/main.js"></script>
+        <script src="../../../javascripts/main.js"></script>
         
 </head>
 
@@ -22,7 +22,8 @@
           <input type="text" placeholder="Username" id="username" />
           <input type="text" placeholder="Faculty ID" id="faculty_id" />
           <input type="password" placeholder="New Password" id="password" />
-          <input type="text" placeholder="Privilege" id="privilege" />
+          <input type="text" placeholder="Privilege (X / Z)" id="privilege" />
+          <input type="text" placeholder="Venue Code" id="venue_code" />
           <button onclick="InchargeRegister()">Register</button>
         </div>
     </div>
