--- a/views/private/admin/add_venue.ejs
+++ b/views/private/admin/add_venue.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Register</title>
+    <title>Add Venue</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../../../stylesheets/login.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -19,12 +19,12 @@
     <div class="login-page">
         <span style="color:red; text-align:center" class="formError" id="formError"></span>
         <div class="form">
-          <input type="text" placeholder="Username" id="username" />
-          <input type="text" placeholder="Faculty ID" id="faculty_id" />
-          <input type="password" placeholder="New Password" id="password" />
-          <input type="text" placeholder="Privilege (X / Z)" id="privilege" />
+          <input type="text" placeholder="Venue Name" id="venue_name" />
+          <input type="text" placeholder="Venue Type" id="venue_type" />
+          <input type="password" placeholder="Venue Code" id="venue_code" />
+          <input type="text" placeholder="Incharge ID(blank if none)" id="incharge_id" />
           <input type="text" placeholder="Venue Code" id="venue_code" />
-          <button onclick="InchargeRegister()">Register</button>
+          <button onclick="addVenue()">Create New Venue</button>
         </div>
     </div>
     
