Added more functionalities to Incharge

--- a/views/private/incharge/dashboard.ejs
+++ b/views/private/incharge/dashboard.ejs
@@ -49,10 +49,10 @@
  
             <div id="venue" class="card">
                 <div class="card-info back">
-                  <a href="../../../private/events/delete_event">
-                    <span class="about-head">Delete</span><br/>
+                  <a href="../../../private/events/display_events">
+                    <span class="about-head">Display Events</span><br/>
                   </a>
-                  <span class="about">Delete events..!</span>
+                  <span class="about">Shows the list of events concerned..!</span>
                 </div>
               </div>            
 
